<resources>
    <string name="something_wrong_fcm_sender_id" translatable="false">"Some thing is wrong with FCM sender id"</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="channel_id_without_sound" translatable="false">channel_without_sound</string>
    <string name="default_channel_id" translatable="false">system default channel</string>
    <string name="iz_share">Share</string>
    <string name="iz_action_settings" translatable="false">Settings</string>
    <string name="iz_news_hub_powered_by" translatable="false">News Hub Powered by </string>
    <string name="iz_no_new_update" translatable="false">You have no new updates.</string>
    <string name="iz_news_hub" translatable="false">News Hub</string>
    <string name="iz_brand_name" translatable="false">iZooto</string>
    <string name="iz_watch_this_space_to_get_latest_updates" translatable="false">Watch this space to get latest updates.</string>
    <string name="iz_title_name" translatable="false">Title</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="timer" translatable="false">0:00</string>
    <string name="watch_this_space_to_get_latest_updates" translatable="false">Watch this space to get latest updates.</string>
    <string name="iz_cta_dismissed">Close</string>
    <string name="share" translatable="false">Share</string>
    <string name="news_hub_powered_by" translatable="false">News Hub Powered by </string>
    <string name="no_new_update" translatable="false">You have no new updates.</string>
    <string name="izooto" translatable="false">iZooto</string>
    <string name="title" translatable="false">Title</string>
    <string name="iz_ic_share" translatable="false">Share</string>
    <string name="nz_not_fount_text" translatable="false">Data Not Found</string>
    <string name="nz_not_fount_text_2" translatable="false">Data Not Found2</string>
    <string name="news_hub" translatable="false">News Hub</string>
    <string name="powered_by" translatable="false">Powered by</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="footer_text" translatable="false">You\'re all caught up!</string>
    <string name="_1_hr_ago" translatable="false">1 hrs ago</string>
    <string name="iz_nz_bottom_msg">You\'re all caught up!</string>


</resources>
