<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/iz_news_hub_bg"
    android:orientation="vertical"
    tools:context="com.izooto.NewsHubActivity">

    <LinearLayout
        android:id="@+id/nh_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45dp"
        android:background="@color/iz_azure">

        <ImageView
            android:id="@+id/iv_toolbar_back_button"
            android:layout_width="@dimen/width_21dp"
            android:layout_height="@dimen/height_21dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/news_hub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar_alert1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@android:color/holo_blue_light" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/idNestedSV_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linear_powered_by"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/staticListData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />

                <ProgressBar
                    android:id="@+id/progress_bar_alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@android:color/holo_blue_light"
                    android:visibility="invisible" />

                <include
                    android:id="@+id/list_item_end"
                    layout="@layout/layout_footer"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/ll_no_data_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/iz_news_hub_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_not_found"
                tools:ignore="UseAppTint"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/iz_ic_vector"
                tools:ignore="UseAppTint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:gravity="center"
                android:text="@string/no_new_update"
                android:textColor="@color/iz_news_hub_no_new_updates"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/watch_this_space_to_get_latest_updates"
                android:textColor="@color/iz_news_nub_no_data_found_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_powered_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/iz_news_hub_view_color"
            android:layoutDirection="ltr"
            android:layout_alignParentBottom="true">
            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:background="@color/dawn"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_35dp"
            android:layout_alignParentBottom="true"
            android:background="@color/iz_news_hub_view_color"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_powered_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_hub_powered_by"
                android:textColor="@color/iz_news_hub_branding_text_color"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/tv_izooto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/izooto"
                android:textColor="@color/iz_azure"
                android:textSize="13dp" />
        </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>