<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/iz_news_hub_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/nh_toolbar_alert"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45dp"
        android:background="@color/iz_azure">

        <ImageView
            android:id="@+id/iv_bell"
            android:layout_width="@dimen/width_25dp"
            android:layout_height="@dimen/height_25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_30dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_news_hub"
            android:visibility="invisible"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_toolbar_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_toStartOf="@+id/iv_toolbar_back_button_alert"
            android:layout_toEndOf="@id/iv_bell"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/news_hub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/iv_toolbar_back_button_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:padding="@dimen/margin_5dp"
            android:src="@drawable/cancel"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar_alert1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@android:color/holo_blue_light" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/idNestedSV_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_above="@+id/ll_powered_by">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/staticListData_alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />

                <ProgressBar
                    android:id="@+id/progress_bar_alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@android:color/holo_blue_light"
                    android:visibility="invisible" />

                <include
                    android:id="@+id/list_item_end"
                    layout="@layout/layout_footer"
                    android:visibility="gone" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/ll_no_data_found_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/iz_news_hub_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_not_found"
                tools:ignore="UseAppTint" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/iz_ic_vector"
                tools:ignore="UseAppTint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:gravity="center"
                android:text="@string/no_new_update"
                android:textColor="@color/iz_news_hub_no_new_updates"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/watch_this_space_to_get_latest_updates"
                android:textColor="@color/iz_news_hub_branding_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_powered_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/iz_news_hub_view_color"
            android:layoutDirection="ltr"
            android:visibility="invisible"
            android:layout_alignParentBottom="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/dawn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_35dp"
            android:layout_alignParentBottom="true"
            android:background="@color/iz_news_hub_view_color"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_powered_by_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_hub_powered_by"
                android:textColor="@color/iz_news_hub_branding_text_color"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/tv_izooto_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="iZooto"
                android:textColor="@color/iz_azure"
                android:textSize="13dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>