<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/iz_news_hub_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/nt_banner_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/iz_notificationBg"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/nt_title"
            style="@style/TextAppearance.Compat.Notification.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="3"
            android:text="@string/title"
            android:textAlignment="viewStart"
            android:textColor="@color/iz_news_hub_text_color"
            android:textSize="17dp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/circle_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:cardCornerRadius="25dp"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/circle_icon"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/publisher_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/circle_card"
            android:singleLine="true"
            android:text="Publisher"
            android:textColor="@color/iz_news_hub_time_color"
            android:textSize="13dp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/news_hub_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/publisher_"
            android:singleLine="true"
            android:text="@string/_1_hr_ago"
            android:textColor="@color/iz_news_hub_time_color"
            android:textSize="13dp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/news_hub_share_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circle"
            android:contentDescription="@string/todo"
            android:padding="11dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_share_25" />


    </RelativeLayout>

    <View
        android:id="@+id/news_hub_view"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="@color/dawn" />

</LinearLayout>